--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,12 +25,14 @@ body {
   height: 120px;
   position: fixed;
   width: 100%;
-  background: url("../../src/img/bgMainDark.jpg");
+  background-color: rgb(0 19 34 / 63%);
   z-index: 2;
 }
 
 .header {
-  background: url("../../src/img/bgMainDark.jpg");
+  /* background: url("../../src/img/bgMainDark.jpg"); */
+  background-color: rgb(0 19 34 / 63%);
+  height: 1200px;
 }
 .header_dark {
   padding-bottom: 170px;
@@ -66,7 +68,7 @@ body {
   color: #ffffff;
 }
 .header__info {
-  padding-top: 60px;
+  padding-top: 360px;
   text-align: center;
 }
 .header__info-title {
@@ -1957,4 +1959,24 @@ ul li:hover ul li {
     width: 407px;
   }
 }
+#videoBackground {
+  position: fixed;
+  right: -5%;
+  bottom: 0;
+  margin: 0 auto;
+  min-width: 110%;
+  z-index: -2;
+}
+#blackscreenVideo{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
+}
+.main {
+  background-color: white;
+}
+
 /*# sourceMappingURL=style.css.map */
