--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1968,7 +1968,9 @@ ul li:hover ul li {
   z-index: -2;
 }
 .main {
-  background-color: white;
+  background-color: rgb(46, 65, 96);
 }
-
+.home__text, .tasks__title {
+  color: white;
+}
 /*# sourceMappingURL=style.css.map */
